--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Aluna @ViewData["Aluna"]</p>
+
+<address>
+    <strong>More information: </strong> <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/learn/lecture/11527650#overview">Udemy.com</a>
+</address>
